fix z-index

--- a/assets/scss/03-organisms/_emergency-alerts.scss
+++ b/assets/scss/03-organisms/_emergency-alerts.scss
@@ -15,7 +15,7 @@ $colors: (
 
 .ma__emergency-alerts {
   position: relative;
-  z-index: $z-dropdown + 1;
+  z-index: $z-dropdown - 1;
 
   @media($bp-header-toggle-max) {
     top: 40px;
@@ -50,7 +50,7 @@ $colors: (
     @media ($bp-small-max) {
       display: none;
     }
-  
+
     @media ($bp-small-min) and ($bp-large-max) {
       @include ma-container;
       margin: 0;
@@ -94,7 +94,7 @@ $colors: (
 
   &__container {
     @include ma-container;
-    
+
     @media ($bp-small-max) {
       padding-bottom: 10px;
     }
@@ -121,7 +121,7 @@ $colors: (
       padding: 20px;
       padding-top: 0;
       transition: background-color .5s;
-      
+
       .is-open & {
         background-color: tint($c-warning, 90%);
       }
